css/footer.css
.page-footer {
  background-color: #2e2f42;
  padding: 100px 0;
}

.page-footer .container {
  display: flex;
  align-items: baseline;
}

.footer-info {
  margin-right: 120px;
}

.page-footer .logo {
  display: inline-block;

  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #f4f4fd;

  margin-bottom: 16px;
}

.page-footer .logo-part {
  color: #4d5ae5;
}

.page-footer p {
  max-width: 264px;

  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
}

.footer-social-title {
  margin-bottom: 16px;

  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;

  color: #ffffff;
}

.footer-social-list {
  display: flex;
  gap: 16px;
}

.footer-social-item {
  width: 40px;
  height: 40px;
}

.footer-social-link {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;
  height: 100%;

  border-radius: 50%;
  background-color: #4d5ae5;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-social-link:hover,
.footer-social-link:focus {
  background-color: #31d0aa;
}

.footer-social-icon {
  fill: #f4f4fd;
  color: #f4f4fd;
}

